# chester

./: CMakeLists.txt  README.md  config.h.in
src/client/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  Code.hpp  Header.hpp  Reader.hpp  Serializer.hpp  Structurer.hpp  Writer.hpp  messages.hpp
src/common/network/: Client.hpp  Server.hpp  Socket.hpp  byte_order.hpp  error.hpp  initiate.cpp  initiate.hpp
src/server/: CMakeLists.txt  main.cpp
src/utility/: debug.hpp  serialize.hpp  spinlock.hpp  stream.hpp  string.hpp  structure.hpp  type_traits.hpp
src/utility/crypto/: Sha256.hpp
src/utility/zlib/: Deflate.hpp  Inflate.hpp
